--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <header class="header">
         <div class="header-content">
             <div class="logo-section">
-                <img src="images/moe-logo.png" alt="شعار وزارة التعليم" class="moe-logo">
+                <img src="moe-logo.png" alt="شعار وزارة التعليم" class="moe-logo">
             </div>
             <div class="title-section">
                 <h1>ملف الإنجاز الإلكتروني</h1>
                 <p>شواهد الأداء الوظيفي</p>
             </div>
             <div class="vision-logo">
-                <img src="images/moe-vision-logo.jpg" alt="رؤية 2030" class="vision-img">
+                <img src="moe-vision-logo.jpg" alt="رؤية 2030" class="vision-img">
             </div>
         </div>
     </header>
